Simplify and enhance CLI tools packaging process
Updated the `<BeforePack>` property to include the `PublishAndIncludeCliTools` target, ensuring it runs during packaging. Removed the condition `'$(IsPacking)' == 'true'` from the target for simpler execution logic.

Added detailed logging for publishing CLI tools targeting `net6.0`, `net8.0`, and `net9.0`. Updated the `<Exec>` command to publish for `net6.0` with error handling.

Simplified `<ItemGroup>` logic by removing design-time conditions. Added new `<ItemGroup>` entries to include published files and folders for all target frameworks, excluding `.pdb` files.

Included `<None>` items to package published files and folders, specifying `Pack` as `true` and defining `PackagePath` for each framework. These changes improve maintainability, visibility, and control over the packaging process.

--- a/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
+++ b/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
@@ -37,8 +37,8 @@
   </PropertyGroup>
   
   <!-- Automatically publish CLI tools and include them in the package -->
-  <!-- Only run during Pack operations, not during regular builds or design-time -->
-  <Target Name="PublishAndIncludeCliTools" Condition="'$(IsPacking)' == 'true'">
+  <!-- Runs via BeforePack, so only during pack operations -->
+  <Target Name="PublishAndIncludeCliTools">
     <Message Text="Publishing CLI tools for net6.0, net8.0, net9.0..." Importance="high" />
     <Message Text="Configuration: $(Configuration)" Importance="high" />
     
@@ -51,8 +51,7 @@
     
     <!-- Add the published files to None items for packing -->
     <!-- Use specific paths without RecursiveDir to avoid subdirectory issues -->
-    <!-- Condition prevents design-time evaluation in Visual Studio -->
-    <ItemGroup Condition="'$(DesignTimeBuild)' != 'true' AND '$(BuildingProject)' == 'true'">
+    <ItemGroup>
       <_Net6PublishFiles Include="$(MSBuildThisFileDirectory)..\SA1201ier.Cli\bin\$(Configuration)\net6.0\publish\*.*" Exclude="$(MSBuildThisFileDirectory)..\SA1201ier.Cli\bin\$(Configuration)\net6.0\publish\*.pdb" />
       <_Net6PublishFolders Include="$(MSBuildThisFileDirectory)..\SA1201ier.Cli\bin\$(Configuration)\net6.0\publish\**\*.*" Exclude="$(MSBuildThisFileDirectory)..\SA1201ier.Cli\bin\$(Configuration)\net6.0\publish\*.pdb;$(MSBuildThisFileDirectory)..\SA1201ier.Cli\bin\$(Configuration)\net6.0\publish\*.*" />
       
@@ -63,7 +62,7 @@
       <_Net9PublishFolders Include="$(MSBuildThisFileDirectory)..\SA1201ier.Cli\bin\$(Configuration)\net9.0\publish\**\*.*" Exclude="$(MSBuildThisFileDirectory)..\SA1201ier.Cli\bin\$(Configuration)\net9.0\publish\*.pdb;$(MSBuildThisFileDirectory)..\SA1201ier.Cli\bin\$(Configuration)\net9.0\publish\*.*" />
     </ItemGroup>
     
-    <ItemGroup Condition="'$(DesignTimeBuild)' != 'true' AND '$(BuildingProject)' == 'true'">
+    <ItemGroup>
       <None Include="@(_Net6PublishFiles)">
         <Pack>true</Pack>
         <PackagePath>tools/sa1201ier/net6.0</PackagePath>
